syntax = "proto3";

message QueryDocRequest {
    string doc_id = 1;
}
